tests/ui/use/use-meta-mismatch.rs
extern crate fake_crate as extra; //~ ERROR can't find crate for `fake_crate`

fn main() { }
